add the image storing feuture in plat and category controller and regenerate the documentation
